--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -220,7 +220,9 @@
 				justify-content: end;
 
 				button {
-					font-size: rem(24);
+					color: $green-dark;
+					font-size: rem(18);
+					font-weight: $font-weight-semibold;
 				}
 			}
 		}
@@ -253,7 +255,9 @@
 			padding-left: 0;
 
 			li {
+				display: grid;
 				flex: initial;
+				grid-template-rows: 1fr min-content;
 				text-align: center;
 
 				svg {
@@ -344,7 +348,7 @@
 						grid-template-columns: initial;
 						height: 100%;
 						padding: rem(16);
-						row-gap: 0;
+						row-gap: rem(16);
 
 						svg {
 							align-self: end;
