fix: fix dynamic topic checkbox aria-labelledby

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -33,7 +33,7 @@
             </svg>
           </div>
           <div class="topic-checkbox">
-            <input class="filter-checkbox" aria-labelledby="{{ "title_" + categoryId }}" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId | slug }}">
+            <input class="filter-checkbox" aria-labelledby="{{ "title_" + categoryId }}" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId }}">
             <label for="{{ categoryId }}"></label>
           </div>
         </li>
