fix: restore green tile resources link on homepage

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -26,6 +26,9 @@
     <a href="/badges/" class="azure card">
       <h2>Earn We Count Badges</h2>
     </a>
+    <a href="/Resources/" class="green card">
+      <h2>Search the We Count Library</h2>
+    </a>
   </div>
 </div>
 
