fix: fix typo in typesFilterTitle reference

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -54,7 +54,7 @@
   </div>
 
   {# Media Type selections #}
-  {% set filterTitle = typeFilterTitle %}
+  {% set filterTitle = typesFilterTitle %}
   {% set filterType = "media types" %}
   {% include 'components/filter-resources-header.njk' %}
 
