--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -19,6 +19,9 @@ pagination:
     <symbol id="arrowdown" viewBox="0 0 39 24">
       {% include 'svg/arrowdown.svg' %}
     </symbol>
+    <symbol id="apply" viewBox="0 0 26 26" fill="none">
+      {% include 'svg/apply.svg' %}
+    </symbol>
     <symbol id="reset" viewBox="0 0 26 26" fill="none">
       {% include 'svg/reset.svg' %}
     </symbol>
@@ -186,6 +189,9 @@ pagination:
         </div>
 
         <div class="filter-buttons">
+          <button class="apply-button" type="submit">
+            <svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
+          </button>
           <button class="reset-button" type="button">
             <svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
           </button>
