--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -106,6 +106,11 @@
 			}
 		}
 
+		// override `display: hidden` defined in _news-and-views.scss
+		.filter-body[data-section="topics"] {
+			display: block;
+		}
+
 		.filter-body {
 			.filter-clear {
 				display: flex;
