fix: fix an a11y issue of having empty form labels on topic cards

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -29,7 +29,7 @@
           </div>
           <div class="topic-checkbox">
             <input class="filter-checkbox" aria-labelledby="{{ "title_" + categoryId }}" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId }}">
-            <label for="{{ categoryId }}"></label>
+            <span role="presentation"></span>
           </div>
         </li>
       {% endfor %}
