--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -135,7 +135,7 @@ pagination:
                 </div>
                 <div class="topic-checkbox">
                   <input class="filter-checkbox" :aria-labelledby="'title_' + category.categoryId" type="checkbox" v-model="category.checked" :id="category.categoryId" :name="'c_' + category.categoryId">
-                  <label :for="category.categoryId"></label>
+                  <span role="presentation"></span>
                 </div>
               </li>
           </ul>
