--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -224,7 +224,9 @@ pagination:
 
             <div class="info">
               <svg aria-hidden="true"><use xlink:href="#topics" /></svg>
-              Topic: {{ '{{ resourceCategories.filter(cat => cat.focuses.includes(item.focus))[0].categoryLabel }}' }}
+              Topic:
+              <span v-if="resourceCategories.filter(cat => cat.focuses.includes(item.focus))[0]">{{ '{{ resourceCategories.filter(cat => cat.focuses.includes(item.focus))[0].categoryLabel }}' }}</span>
+              <span v-else>{{ '{{ item.focus }}' }}</span>
             </div>
 
             <div class="info" v-if="item.learnTags">
