--- a/src/_includes/layouts/resourceDetail.njk
+++ b/src/_includes/layouts/resourceDetail.njk
@@ -57,7 +57,7 @@
           <div><span class="feature-name">Source:</span> {{ source | replace("<", "&lt;") | safe }}</div>
 
           <svg><use xlink:href="#readability-on-detail" /></svg>
-          <div><span class="feature-name">Redability:</span>
+          <div><span class="feature-name">Readability:</span>
               {% if readability.length > 0 %}{{ readability | join(", ") | safe }}{% else %}N/A{% endif %}
            </div>
 
