feat: add idrc project indicator to the header

--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -27,6 +27,7 @@
       </div>
   </div>
   <!-- END markup for Preference Editor -->
+  {% include 'components/idrc-indicator.njk' %}
   {% include 'components/brand.njk' %}
     <div class="site-nav-wrapper">
         <div class="site-nav">
