--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -6,6 +6,7 @@
 @import "expander";
 @import "filter";
 @import "identity";
+@import "idrc-indicator";
 @import "initiatives";
 @import "map";
 @import "news-and-views";
