--- a/src/scss/components/_idrc-indicator.scss
+++ b/src/scss/components/_idrc-indicator.scss
@@ -1,22 +1,18 @@
-.idrc-indicator {
-	background-color: #ffcb70;
+.idrc-indicator-wrapper {
+	background-color: $orange-focus;
+	font-family: Roboto, sans-serif;
 
-	.idrc-indicator-element {
-		align-items: center;
-		display: flex;
-		font-family: Roboto, sans-serif;
-		font-size: rem(12);
-		height: rem(55);
-		justify-content: center;
-		max-height: rem(80);
-		max-width: $max-width-margins;
-	}
-}
-
-@include breakpoint-up(lg) {
-	.idrc-indicator .idrc-indicator-element {
-		display: block;
+	.idrc-indicator {
 		margin: auto;
-		padding: rem(18) 0 rem(18) rem(18);
+		max-width: $max-width-margins;
+
+		.idrc-indicator-element {
+			align-items: center;
+			display: flex;
+			font-size: rem(14);
+			height: rem(55);
+			max-height: rem(80);
+			padding: 0 rem(26);
+		}
 	}
 }
