fix: hoist button children layout rule following review

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -85,6 +85,11 @@ svg:not([fill]) {
 	fill: currentColor;
 }
 
+button {
+	align-items: center;
+	display: flex;
+}
+
 .wp-block-file__button::-moz-focus-inner,
 button::-moz-focus-inner {
 	outline: none;
