fix: adjust spelling, naming, placeholder status for button centering following review

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -135,7 +135,7 @@
 
 	.apply-button,
 	.reset-button {
-		@extend .has-centred-children;
+		@extend %has-vertically-centered-children;
 
 		padding: rem(1) rem(3);
 
