--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -83,7 +83,7 @@
 			margin-top: rem(24);
 
 			button {
-				@extend .has-centred-children;
+				@extend %has-vertically-centered-children;
 
 				background-color: $white;
 				box-shadow: 0 0 rem(7) $border-shadow-colour;
@@ -101,7 +101,7 @@
 			}
 
 			button {
-				@extend .has-centred-children;
+				@extend %has-vertically-centered-children;
 
 				align-self: center;
 				height: rem(32);
@@ -134,7 +134,7 @@
 		}
 
 		.filter-expand-button {
-			@extend .has-centred-children;
+			@extend %has-vertically-centered-children;
 
 			--expand-button-color: none;
 			--expand-button-stroke-color: #{$grey-dark};
