chore: update more package versions

--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -9,7 +9,7 @@
 		$context: $context * 1px;
 	}
 
-	@return $pixels / $context * 1rem;
+	@return calc($pixels / $context) * 1rem;
 }
 
 @function breakpoint-value($name, $breakpoints: $breakpoints) {
