--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -7,7 +7,7 @@
 	&::before {
 		content: " ";
 		display: block;
-		padding-top: ($height / $width) * 100%;
+		padding-top: calc($height / $width) * 100%;
 		width: 100%;
 	}
 
