--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,7 +9,8 @@ $font-weight-bold: 700;
 
 /** Max Widths **/
 $max-width-margins: rem(1600);
-// the ch widths represent the max width of the 'main' element in narrow and wide viewports
+
+// the ch widths represent the max width of the "main" element in narrow and wide viewports
 $full-width-video-margins: calc(-50vw + min(37.5ch, 50%));
 $full-width-video-widescreen-margins: calc(-50vw + min(65ch, 50%));
 
@@ -37,34 +38,27 @@ $grey-dark: #313131;
 $grey-shade: #c4c4c4;
 $navy: #203149;
 $navy-light: #2e405b;
-
 $blue-alt: #5c81a9;
 $blue-alt-contrast: #5879a0;
 $blue-alt-dark: #4d6b8d;
 $blue-alt-light: #8caabb;
 $blue-grey: #abdde9;
 $azure: #89b2e0;
-
 $green: #b0d0be;
 $green-light: #cee6c5;
 $green-dark: #465d8b;
 $green-pale: #f7fff4;
 $green-grey: #cde6c4;
-
 $orange-focus: #fadc90;
 $orange-light: #5c81a9;
-
 $yellow: #ffcb70;
-
 $border-shadow-radius: rem(4);
-$border-shadow-colour: rgba(0, 0, 0, 0.25);
+$border-shadow-colour: rgba(0 0 0 / 25%);
 $border-shadow-light: 0 0 $border-shadow-radius $border-shadow-colour;
-
 $topic-title-border-radius: rem(8);
 
 // UIO themes
-$UIOThemes:
-	"bw" #000 #fff,
+$uio-themes: "bw" #000 #fff,
 	"wb" #fff #000,
 	"yb" #ff0 #000,
 	"by" #000 #ff0,
