--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,7 +14,7 @@ select {
 	line-height: normal;
 }
 
-::-webkit-input-placeholder {
+::placeholder {
 	color: inherit;
 	opacity: 0.54;
 }
@@ -70,9 +70,6 @@ p {
 	margin: 1em 0;
 }
 
-.wp-block-file__button:hover::before,
-.wp-block-file__button:focus::before,
-.wp-block-file__button:active::before,
 button:hover::before,
 button:focus::before,
 button:active::before {
@@ -82,27 +79,22 @@ button:active::before {
 
 // SVG fill rule imported from sanitize ensures SVG colour agrees with text colour
 svg:not([fill]) {
-	fill: currentColor;
+	fill: currentcolor;
 }
 
-.wp-block-file__button::-moz-focus-inner,
 button::-moz-focus-inner {
 	outline: none;
 }
 
-.wp-block-file__button:focus,
 button:focus {
 	outline: none;
 }
 
-.wp-block-file__button:-moz-focusring,
 button:-moz-focusring {
 	color: transparent;
 	text-shadow: 0 0 0 $green-dark;
 }
 
-// stylelint-disable-next-line
-.wp-block-file__button,
 button:not(.fl-prefsEditor-buttons) button {
 	background-color: $green-light;
 	border: 0;
@@ -117,28 +109,16 @@ button:not(.fl-prefsEditor-buttons) button {
 	transform: perspective(rem(1)) translateZ(0);
 }
 
-// stylelint-disable-next-line
-.wp-block-file__button::before,
 button::before:not(.fl-prefsEditor-buttons) button {
 	border-radius: rem(26);
 	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
-	content: '';
+	content: "";
 	height: rem(54);
 	left: 0;
 	opacity: 1;
 	position: absolute;
 	top: 0;
 	width: 100%;
-}
-
-.wp-block-file {
-	text-align: center;
-
-	.wp-block-file__button {
-		display: block;
-		font-weight: $font-weight-medium;
-		height: auto;
-	}
 }
 
 @include breakpoint-up(lg) {
@@ -157,13 +137,5 @@ button::before:not(.fl-prefsEditor-buttons) button {
 
 	h4 {
 		font-size: rem(18);
-	}
-
-	.wp-block-file {
-		text-align: unset;
-
-		.wp-block-file__button {
-			display: inline;
-		}
 	}
 }
