--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,71 +1,71 @@
 @font-face {
 	font-display: swap;
-	font-family: 'Fira Sans';
+	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 400;
 	src:
-		local('Fira Sans Regular'),
-		local('FiraSans-Regular'),
-		url('../fonts/fira-sans-v10-latin-regular.woff2') format('woff2'),
-		url('../fonts/fira-sans-v10-latin-regular.woff') format('woff');
+		local("Fira Sans Regular"),
+		local("FiraSans-Regular"),
+		url("../fonts/fira-sans-v10-latin-regular.woff2") format("woff2"),
+		url("../fonts/fira-sans-v10-latin-regular.woff") format("woff");
 }
 
 @font-face {
 	font-display: swap;
-	font-family: 'Fira Sans';
+	font-family: "Fira Sans";
 	font-style: italic;
 	font-weight: 400;
 	src:
-		local('Fira Sans Italic'),
-		local('FiraSans-Italic'),
-		url('../fonts/fira-sans-v10-latin-italic.woff2') format('woff2'),
-		url('../fonts/fira-sans-v10-latin-italic.woff') format('woff');
+		local("Fira Sans Italic"),
+		local("FiraSans-Italic"),
+		url("../fonts/fira-sans-v10-latin-italic.woff2") format("woff2"),
+		url("../fonts/fira-sans-v10-latin-italic.woff") format("woff");
 }
 
 @font-face {
 	font-display: swap;
-	font-family: 'Fira Sans';
+	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 500;
 	src:
-		local('Fira Sans Medium'),
-		local('FiraSans-Medium'),
-		url('../fonts/fira-sans-v10-latin-500.woff2') format('woff2'),
-		url('../fonts/fira-sans-v10-latin-500.woff') format('woff');
+		local("Fira Sans Medium"),
+		local("FiraSans-Medium"),
+		url("../fonts/fira-sans-v10-latin-500.woff2") format("woff2"),
+		url("../fonts/fira-sans-v10-latin-500.woff") format("woff");
 }
 
 @font-face {
 	font-display: swap;
-	font-family: 'Fira Sans';
+	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 600;
 	src:
-		local('Fira Sans SemiBold'),
-		local('FiraSans-SemiBold'),
-		url('../fonts/fira-sans-v10-latin-600.woff2') format('woff2'),
-		url('../fonts/fira-sans-v10-latin-600.woff') format('woff');
+		local("Fira Sans SemiBold"),
+		local("FiraSans-SemiBold"),
+		url("../fonts/fira-sans-v10-latin-600.woff2") format("woff2"),
+		url("../fonts/fira-sans-v10-latin-600.woff") format("woff");
 }
 
 @font-face {
 	font-display: swap;
-	font-family: 'Fira Sans';
+	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 700;
 	src:
-		local('Fira Sans Bold'),
-		local('FiraSans-Bold'),
-		url('../fonts/fira-sans-v10-latin-700.woff2') format('woff2'),
-		url('../fonts/fira-sans-v10-latin-700.woff') format('woff');
+		local("Fira Sans Bold"),
+		local("FiraSans-Bold"),
+		url("../fonts/fira-sans-v10-latin-700.woff2") format("woff2"),
+		url("../fonts/fira-sans-v10-latin-700.woff") format("woff");
 }
 
 @font-face {
 	font-display: swap;
-	font-family: 'Roboto';
+	font-family: Roboto;
 	font-style: normal;
 	font-weight: 400;
 	src:
-		local('Roboto'),
-		local('Roboto-Regular'),
-		url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-		url('../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Modern Browsers */
+		local("Roboto"),
+		local("Roboto-Regular"),
+		url("../fonts/roboto-v20-latin-regular.woff2") format("woff2"), /* Super Modern Browsers */
+		url("../fonts/roboto-v20-latin-regular.woff") format("woff"); /* Modern Browsers */
 }
