--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -9,13 +9,13 @@
 		background-position: 50% 80%;
 		background-repeat: no-repeat;
 		border-radius: rem(10);
-		box-shadow: 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
+		box-shadow: 0 rem(4) rem(4) rgba(0 0 0 / 25%);
 		height: rem(216);
 		text-align: center;
 
 		&:hover,
 		&:focus {
-			box-shadow: rem(10) rem(10) rem(10) rgba(0, 0, 0, 0.25);
+			box-shadow: rem(10) rem(10) rem(10) rgba(0 0 0 / 25%);
 		}
 
 		h2 {
