Update package dependencies (#962)
* chore: upgrade eleventy from 0.12.1 to 1.0.0

* chore: update versions of some package dependencies

* chore: update more package versions

* chore: update more package versions

* chore: upgrade eslint

* chore: upgrade stylelint package and fix reported errors

* fix: clean up css and js for the team page that no longer exists

* chore: update sass package

* chore: restore eleventy to 0.12.0 due to an unknown error with 1.0.0

--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -1,15 +1,15 @@
 // Functions.
 
 @function rem($pixels, $context: $browser-context) {
-	@if (unitless($pixels)) {
+	@if unitless($pixels) {
 		$pixels: $pixels * 1px;
 	}
 
-	@if (unitless($context)) {
+	@if unitless($context) {
 		$context: $context * 1px;
 	}
 
-	@return $pixels / $context * 1rem;
+	@return calc($pixels / $context) * 1rem;
 }
 
 @function breakpoint-value($name, $breakpoints: $breakpoints) {
