--- a/src/viewsWithTagsIndex.njk
+++ b/src/viewsWithTagsIndex.njk
@@ -27,8 +27,8 @@ permalink: viewsWithTags.json
   "tags": [
   {%- for item in collections.viewsTags %}
     {
-      "name": {{ item | dump | safe }},
-      "slug": {{ item | slug | dump | safe }}
+      "name": {{ item.name | dump | safe }},
+      "slug": {{ item.slug | dump | safe }}
     }{% if not loop.last %},{% endif %}
   {%- endfor %}
   ]
