feat: add new category for the resources filter

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -44,6 +44,9 @@
     <symbol id="dataScience" viewBox="0 0 101 99">
       {% include 'svg/topic-work-for-pwd-in-data-science.svg' %}
     </symbol>
+    <symbol id="ictStandards" viewBox="0 0 123 117">
+      {% include 'svg/ict-standards.svg' %}
+    </symbol>
   </svg>
 
   <article class="resources static-view">
