fix: resolve deprecation errors and linting issue

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -12,12 +12,9 @@
 	}
 
 	> .content {
-		bottom: 0;
-		left: 0;
+		inset: 0;
 		margin: 0;
 		position: absolute;
-		right: 0;
-		top: 0;
 	}
 
 	&:empty::before {
