--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -261,11 +261,10 @@
 
 					.topic-title {
 						align-items: start;
-						column-gap: 0;
+						gap: rem(16) 0;
 						grid-template-columns: initial;
 						height: 100%;
 						padding: rem(16);
-						row-gap: rem(16);
 
 						svg {
 							align-self: end;
