fix: final changes

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,7 +28,7 @@
       <div class="content-wrapper">
         <aside id="toc"></aside>
         <main>
-          <nav class="flc-toc-tocContainer hidden-on-mobile-for-map"></nav>
+          <nav class="flc-toc-tocContainer"></nav>
           {% block content %}{% endblock %}
         </main>
       </div>
