--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,7 +2,7 @@
   {% set pageTitle = title %}
 {% endif %}
 <!doctype html>
-<html lang="en-ca">
+<html lang="en-CA">
   <head>
     {% if env.context !== "dev" %}
     {% include 'globals/service-worker.njk' %}
