--- a/src/viewsWithTagsIndex.njk
+++ b/src/viewsWithTagsIndex.njk
@@ -3,7 +3,7 @@ permalink: viewsWithTags.json
 ---
 {
   "views": [
-  {%- for item in collections.views %}
+  {%- for item in collections["views_en-CA"] %}
     {
       "title": {{ item.data.title | dump | safe }},
       "author": {{ item.data.author | dump | safe }},
